--- a/AirCanvas/res/layout/activity_main.xml
+++ b/AirCanvas/res/layout/activity_main.xml
@@ -4,10 +4,12 @@
 			  android:orientation="vertical"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent">
-
+    
 	<FrameLayout
 			android:id="@+id/camera_preview"
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent"
-			android:layout_weight="1"/>
+			android:layout_weight="1">
+
+	</FrameLayout>
 </LinearLayout>
